--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Ruen</string>
-    <string name="translator">Переводчик</string>
-    <string name="Карточки" />
-    <string name="Cards">Карточки</string>
+    <string name="new_card">Новая карточка</string>
+    <string name="сards">Карточки</string>
     <string name="settings">Настройки</string>
 </resources>
