--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     // messages
     <string name="save_card_success">Карточка сохранена</string>
-    <string name="field_word_is_empty">Поле "Слово" пустое</string>
+    <string name="no_translations">Нет ни одного перевода</string>
     <string name="list_of_translation_is_empty">Пустой список переводов</string>
 
 </resources>
