--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,18 @@
     <string name="сards">Карточки</string>
     <string name="settings">Настройки</string>
 
+    // текст для кнопок с плейсхолдером
+    <string name="dont_know">Нет\n%s</string>
+    <string name="bad_know">Плохо\n%s</string>
+    <string name="good_know">Хорошо\n%s</string>
+    <string name="excellent_know">Помню\n%s</string>
+
     // messages
     <string name="save_card_success">Карточка сохранена</string>
     <string name="no_translations">Нет ни одного перевода</string>
     <string name="list_of_translation_is_empty">Пустой список переводов</string>
     <string name="repeating">Повторение</string>
+
     // сокращения для интервалов
     <string name="minutes">м.</string>
     <string name="hours">ч.</string>
