fragment с отображением yandex картинок и выбором картинки

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -59,4 +59,5 @@
     <string name="light">Light</string>
     <string name="cornflower">Cornflower</string>
     <string name="dark">Dark</string>
+    <string name="images">Картинки</string>
 </resources>
