отображение картинки если она есть в карточке

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
     <string name="cornflower">Cornflower</string>
     <string name="dark">Dark</string>
 
-    <string name="images">Images</string>
+    <string name="show_image">Show image</string>
     <string name="image">Image</string>
     <string name="field_word_is_empty">Field \"word\" is empty</string>
 </resources>
