--- a/presentation/src/main/res/values-ru/strings.xml
+++ b/presentation/src/main/res/values-ru/strings.xml
@@ -52,7 +52,7 @@
     <string name="cornflower">Васильковая</string>
     <string name="dark">Темная</string>
 
-    <string name="images">Картинки</string>
+    <string name="show_image">Показать картинку</string>
     <string name="image">Картинка</string>
     <string name="field_word_is_empty">Поле \"Слово\" пустое</string>
 </resources>
