--- a/presentation/src/main/res/values-ru/strings.xml
+++ b/presentation/src/main/res/values-ru/strings.xml
@@ -57,4 +57,6 @@
     <string name="show_image">Показать картинку</string>
     <string name="image">Картинка</string>
     <string name="field_word_is_empty">Поле \"Слово\" пустое</string>
+    <string name="start_time">Время начала</string>
+    <string name="end_time">Время окончания</string>
 </resources>
