--- a/presentation/src/main/res/values-ru/strings.xml
+++ b/presentation/src/main/res/values-ru/strings.xml
@@ -59,4 +59,8 @@
     <string name="field_word_is_empty">Поле \"Слово\" пустое</string>
     <string name="start_time">Время начала</string>
     <string name="end_time">Время окончания</string>
+
+    <string name="pieces">шт.</string>
+
+
 </resources>
